# digital-asset-bank

./: Cargo.toml  Dockerfile  Makefile  README.md  Service API.postman_collection.json  service.yaml
front-end/: Dockerfile  package-lock.json  package.json
front-end/src/: App.js  CreateUserForm.js
service/: Cargo.toml
service/example_configuration_file/: config.toml
service/src/: config.rs  error_codes.rs  main.rs  routes.rs
service/src/db/: accounts.rs  mod.rs  open.rs  transactions.rs
service/src/db/sql/: account.rs  mod.rs  setup.rs  transaction.rs
tests/: Cargo.toml  lib.rs  utilities.rs
tests/config/: constants.rs  mod.rs  service.rs
tests/service_api_tests/: account.rs  mod.rs  transaction.rs
