[package]
name = "submission"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
fern = "0.6"
humantime = "2.1"
log = "0.4"
reqwest= { version="0.11", features = ["multipart", "json"] }
serde = "1.0.138"
serde_json = "1.0"
serde_derive = "1.0.138"
sha2 = "0.10"
mobc-postgres = { version = "0.7" }
mobc = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["array-impls"] }
toml = "0.5"
warp = { version = "0.3", features = ["tls"] }
clap = { version = "3.2.11", features = ["derive"] }
