[package]
name = "tests"
version = "0.3.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
log = "0.4"
fern = "0.6"
serial_test = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"
clap = "3.2.6"
sha2 = "0.10.0"
chrono = "0.4"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
reqwest= { version="0.11", features = ["multipart", "json"] }
criterion = { version = "0.3.5", features = ["async_futures"]}
portpicker = "0.1.1"
tokio-postgres="0.7.6"
futures = "0.3.26"
toml = "0.5"

[[test]]
name = "integration_test"
path = "lib.rs"
